# aoc-2022

./: LICENSE  README.adoc  archive.html  build.gradle  feed.xml  go.work  index.html  settings.gradle  site.webmanifest  sitemap.xml
.github/workflows/: gh-pages.yml
about/: index.html
day00/kotlin/RJPlog/: README.adoc  day2200.kt
day00/kotlin/corneil/: README.adoc  settings.gradle.kts
day00/python/fallshare/: README.adoc
day00/python/jamhocken/: README.adoc
day00/rust/AlexisTM/: Cargo.toml  README.adoc
day00/rust/mr-kaffee/: .gitignore  Cargo.toml  README.adoc  init.bat  submit.bat  template.json
day00/rust/mr-kaffee/aoc/: Cargo.toml  LICENSE.txt
day00/rust/mr-kaffee/aoc/src/: lib.rs  puzzle_io.rs  template.rs
day00/rust/mr-kaffee/aoc/templates/: _Cargo.toml_  _README.adoc_  _lib.rs_  _main.rs_  _puzzle_factory_snippet_  _puzzle_include_snippet_
day00/rust/mr-kaffee/src/: lib.rs  main.rs
day00/rust/mr-kaffee/template/: Cargo.toml
day00/rust/mr-kaffee/template/src/: lib.rs  main.rs
day01/go/morl99/: go.mod  main.go
day01/kotlin/RJPlog/: README.adoc  day2201_1_2.kt
day01/kotlin/corneil/: README.adoc
day01/python/ceedee666/: README.adoc  day_01.py  input.txt  test_day_01.py
day01/python/fallshare/: solution.py
day01/python/jamhocken/: README.adoc  input.txt  solution.py
day01/python/ojuaf/: sol.py
day01/rust/AlexisTM/: Cargo.toml  README.adoc
day01/rust/mr-kaffee/: Cargo.toml  README.adoc
day01/rust/razziel89/: README.adoc
day02/go/morl99/: go.mod  go.sum  main.go
day02/kotlin/RJPlog/: README.adoc  day2202_1_2.kt
day02/kotlin/corneil/: README.adoc
day02/python/ceedee666/: README.adoc  day_02.py
day02/python/fallshare/: solution.py
day02/python/jamhocken/: README.adoc  input.txt  solution.py
day02/python/ojuaf/: sol.py
day02/rust/AlexisTM/: Cargo.toml  README.adoc
day02/rust/mr-kaffee/: Cargo.toml  README.adoc
day02/rust/razziel89/: README.adoc
day03/go/morl99/: main.go
day03/kotlin/RJPlog/: README.adoc  day2203_1_2.kt
day03/kotlin/corneil/: README.adoc
day03/python/ceedee666/: README.adoc  day_03.py  input.txt
day03/python/fallshare/: solution.py
day03/python/jamhocken/: README.adoc  input.txt  solution.py
day03/python/ojuaf/: sol.py
day03/rust/AlexisTM/: Cargo.toml  README.adoc
day03/rust/mr-kaffee/: Cargo.toml  README.adoc
day03/rust/razziel89/: README.adoc
day04/kotlin/RJPlog/: README.adoc  day2204_1_2.kt
day04/kotlin/corneil/: README.adoc
day04/python/ceedee666/: README.adoc  day_04.py
day04/python/fallshare/: solution.py
day04/python/jamhocken/: README.adoc  input.txt  solution.py
day04/python/ojuaf/: input  sol.py
day04/rust/AlexisTM/: Cargo.toml  README.adoc
day04/rust/mr-kaffee/: Cargo.toml  README.adoc
day04/rust/razziel89/: README.adoc
day05/kotlin/RJPlog/: README.adoc  day2205_1_2.kt
day05/kotlin/corneil/: README.adoc
day05/python/ceedee666/: README.adoc  day_05.py  input.txt
day05/python/fallshare/: solution.py
day05/python/jamhocken/: README.adoc  input.txt  solution.py
day05/python/ojuaf/: input  sol.py
day05/rust/mr-kaffee/: Cargo.toml  README.adoc
day05/rust/razziel89/: README.adoc
day06/kotlin/RJPlog/: README.adoc  day2206_1_2.kt
day06/kotlin/corneil/: README.adoc
day06/python/: solution.py
day06/python/ceedee666/: README.adoc  day_06.py
day06/python/fallshare/: solution.py
day06/python/jamhocken/: README.adoc
day06/python/ojuaf/: sol.py
day06/rust/mr-kaffee/: Cargo.toml  README.adoc
day06/rust/razziel89/: README.adoc
day07/kotlin/RJPlog/: README.adoc  day2207_1_2.kt
day07/kotlin/corneil/: README.adoc
day07/python/ceedee666/: README.adoc  day_07.py  test_day_07.py
day07/python/fallshare/: solution.py
day07/python/jamhocken/: README.adoc  input.txt  solution.py
day07/python/ojuaf/: sol.py
day07/rust/mr-kaffee/: Cargo.toml  README.adoc
day07/rust/razziel89/: README.adoc
day08/kotlin/RJPlog/: README.adoc  day2208_1_2.kt  day2208_puzzle_input.txt
day08/kotlin/corneil/: README.adoc
day08/python/ceedee666/: README.adoc  day_08.py  test_day_08.py
day08/python/jamhocken/: README.adoc  input.txt  solution.py
day08/python/ojuaf/: sol.py
day08/rust/mr-kaffee/: Cargo.toml  README.adoc
day08/rust/razziel89/: README.adoc
day09/kotlin/RJPlog/: README.adoc  day2209_1_2.kt
day09/kotlin/corneil/: README.adoc
day09/python/ceedee666/: README.adoc  day_09.py  test_day_09.py
day09/python/jamhocken/: README.adoc  solution.py
day09/python/ojuaf/: sol.py
day09/rust/mr-kaffee/: Cargo.toml  README.adoc
day09/rust/razziel89/: README.adoc
day10/jamhocken/: README.adoc
day10/kotlin/RJPlog/: README.adoc  day2210_1_2.kt
day10/kotlin/corneil/: README.adoc
day10/python/ceedee666/: README.adoc  day_10.py  test_day_10.py
day10/python/jamhocken/: input.txt  solution.py
day10/python/ojuaf/: sol.py
day10/rust/mr-kaffee/: Cargo.toml  README.adoc
day10/rust/razziel89/: Cargo.toml  README.adoc
day11/kotlin/RJPlog/: README.adoc  day2211_1_2.kt  day2211_puzzle_input.txt
day11/kotlin/corneil/: README.adoc
day12/rust/mr-kaffee/: Cargo.toml  README.adoc
day12/rust/mr-kaffee/src/: lib.rs  main.rs
day13/rust/mr-kaffee/: Cargo.toml  README.adoc
day13/rust/mr-kaffee/src/: lib.rs  main.rs
day16/rust/mr-kaffee/: Cargo.toml  README.adoc
day16/rust/mr-kaffee/src/: lib.rs  main.rs
day20/rust/mr-kaffee/aoc/: Cargo.toml
day22/rust/mr-kaffee/: Cargo.toml  README.adoc  tests_1.txt  tests_2.txt  tests_3.txt  tests_4.txt
day22/rust/mr-kaffee/src/: lib.rs  main.rs
day23/rust/mr-kaffee/: Cargo.toml  README.adoc  input.txt
day23/rust/mr-kaffee/src/: lib.rs  main.rs
news/: 2019-11-29-one-docs-as-code.html  2019-12-07-pair-programming.html  2019-12-13-test-first.html  index.html
profiles/: AlexisTM.adoc  corneil.adoc  docToolchain.adoc  mr-kaffee.adoc
rules/: index.html
solutions/: byCoder.html  byDay.html  byLanguage.html  index.html
src/docs/: index.adoc  learned.adoc
src/site/: jbake.properties
tags/: asciidoc.html  docs-as-code.html  index.html  tdd.html
tests/: index.html
(+263 files in other folders)
