[package]
name = "mr-kaffee-aoc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.*", features = ["blocking"], optional = true }
regex = { version = "1.*", optional = true }

[features]

# default = ["io", "template"]
io = ["dep:regex", "dep:reqwest"]
template = ["dep:regex", "io"]
