[package]
name = "mr-kaffee-template"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.*", features = ["derive"] }

mr-kaffee-aoc = { path = "../aoc", features = ["io", "template"] }
