[package]
name = "mr-kaffee-aoc"
description = "Simple solution framework for AoC, http://adventofcode.com"
authors = ["Peter Wieland <peter@die-wielands.net>"]
license = "MIT"
version = "0.2.1"
edition = "2021"

[dependencies]

reqwest = { version = "0.11.*", features = ["blocking"], optional = true }
regex = { version = "1.*", optional = true }
serde_json = { version = "1.0.*", optional = true }


[features]

# default = ["io", "template"]
io = ["dep:regex", "dep:reqwest"]
template = ["dep:regex", "io", "dep:serde_json"]

